prevent squishing

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 }
 body {
   width: 638px;
+  min-height: 825px;
   margin-left: auto;
   margin-right: auto;
   /* Page defaults */
@@ -82,8 +83,8 @@ li span {
 
 /* Predominantly grid styling below, chronologically set. */
 .inner-body {
-  min-height: 98vh;
-  max-height: 98vh;
+  min-height: 815px;
+  max-height: 815px;
   margin: 0;
   margin-top: 1vh;
   display: grid;
